--- a/section12/package.json
+++ b/section12/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "i": "^0.3.7",
     "pg": "^8.16.0",
     "react": "^19.1.0",
