--- a/section12/package.json
+++ b/section12/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
